fabian hat gezaubert

--- a/index.html
+++ b/index.html
@@ -41,6 +41,13 @@
 
     }
 
+    #sketch {
+        width: 100%;
+        height: 100vh;
+        position: relative;
+        overflow: hidden;
+        z-index: 1000;
+    }
 
 @keyframes fall {
   to {
