--- a/index.html
+++ b/index.html
@@ -74,5 +74,13 @@
     <!-- <script src="lib/p5.sound.min.js"></script> -->
 
     <script src="index.js"></script>
+    <script>
+      document.addEventListener('DOMContentLoaded', function() {
+        const labelContainer = document.getElementById('labelContainer');
+        if (labelContainer) {
+          labelContainer.style.display = 'none';
+        }
+      });
+    </script>
 </body>
 </html>
