--- a/index.html
+++ b/index.html
@@ -55,6 +55,10 @@
     opacity: 0;
   }
 }
+
+#labelContainer, .prediction-div {
+    display: none !important;
+  }
     </style>
 
 </head>
@@ -74,13 +78,5 @@
     <!-- <script src="lib/p5.sound.min.js"></script> -->
 
     <script src="index.js"></script>
-    <script>
-      document.addEventListener('DOMContentLoaded', function() {
-        const labelContainer = document.getElementById('labelContainer');
-        if (labelContainer) {
-          labelContainer.style.display = 'none';
-        }
-      });
-    </script>
 </body>
 </html>
