--- a/index.html
+++ b/index.html
@@ -56,7 +56,13 @@
   }
 }
 
-#labelContainer, .prediction-div {
+  /* Füge dies zu deinen vorhandenen CSS-Styles hinzu */
+  .label-container, #label, #labelContainer, .prediction {
+    display: none !important;
+  }
+  
+  /* Verstecke alle p-Elemente innerhalb des Sketch-Divs */
+  #sketch p {
     display: none !important;
   }
     </style>
