--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>forms with hands</title>
+    <title>shapes with hands</title>
     <style>
     html,
 
@@ -60,8 +60,8 @@
 </head>
 
 <header> 
-    <h1>forms with hands</h1>
-    <h2>Make a form with your hands!</h2>
+    <h1>shapes with hands</h1>
+    <h2>Make a shape or sign with your hands!</h2>
 </header>
 
 <body>
